src/components/OrderingList/OrderingList/OrderingList.scss
.qui .qui-ordering-list {
    display: flex;
    margin-top: 0.1em;
    align-items: center;
    justify-content: center;
}

.qui .qui-ordering-btn {
    display: flex;
    width: 3em;
    height: 3em;
    border-radius: 0.2em;
    border: 0.2em solid #666666;
}

.qui .qui-ordering-border-up {
    display: flex;
    width: 100%;
    margin-bottom: 0.4em;
    border-bottom: 0.2em solid #666666;
}

.qui .qui-ordering-dotted-up {
    width: 100%;
    display: flex;
    margin-bottom: 0.2em;
    border-bottom: 0.2em dashed #666666;
}

.qui .qui-ordering-border-down {
    display: flex;
    width: 100%;
    margin-top: 0.4em;
    border-top: 0.2em solid #666666;
}

.qui .qui-ordering-dotted-down {
    display: flex;
    width: 100%;
    margin-top: 0.2em;
    border-top: 0.2em dashed #666666;
    align-items: center;
}

.qui .qui-ordering-btn-icon {
    font-size: 1em;
    width: 100%;
    outline: none;
    color: #666666;
    background-color: #f8f8f8;
}

.qui .qui-ordering-title-bttn {
    display: flex;
    padding: 0.5em 2em;
    width: 12em;
    min-height: 2.8em;
    margin: 0.2em 0.6em;
    align-items: center;
    justify-content: center;
    border-radius: 0.2em;
    filter: drop-shadow(2px 5px 5px rgb(150, 146, 146));
}

@media only screen and (min-width: 320px) {
    .qui.qui-ordering-list {
        font-size: 0.5em;
    }
}

@media only screen and (min-width:540px) {

    .qui.qui-ordering-list {
        font-size: 1em;
    }
}

@media only screen and (min-width:720px) {
    .qui.qui-ordering-list {
        font-size: 1.5em;
    }
}

